# msl_hand_controller

./: .gitignore  CMakeLists.txt  package.xml  readme.md
config/: left_hand.yaml  left_min_max.yaml  right_hand.yaml  right_min_max.yaml
euslisp/: auto_lock.l  current_over_check.l  manus_node.l  matsuura-hand-interface.l  mhand_l-interface.l  mhand_r-interface.l  msl-hand-interface.l  msl_hand_l-interface.l  msl_hand_r-interface.l
launch/: hand_controller_startup.launch  left_hand_controllers_startup.launch  matsuura_hand_startup_from_c.launch  msl_hand_startup_from_c.launch  right_hand_controllers_startup.launch  save_test_data.launch  win_manus_ros_node.bat  win_roscore.bat
models/: all_mass_props_from_solidworks.txt  exchange.sh  flip_Y.mlx  matsuura_hand_main_l.wrl  matsuura_hand_main_l.wrl.in  matsuura_hand_main_r.wrl  matsuura_hand_main_r.wrl.in  mesh_reduction.mlx  msl_hand_l.l  msl_hand_l.yaml  msl_hand_main_l.wrl  msl_hand_main_l.wrl.in  msl_hand_main_r.wrl  msl_hand_main_r.wrl.in  msl_hand_r.l  msl_hand_r.yaml  parse_mass_props.sh
models/exchanged_wrl/: L_INDEX_LINK0.wrl  L_INDEX_LINK1.wrl  L_LOCK_LINK0.wrl  L_MATSUURAHAND_ALL.wrl  L_MATSUURAHAND_PALM_WRIST.wrl  L_MIDDLE_LINK0.wrl  L_THUMB_LINK0.wrl  L_THUMB_LINK1.wrl  R_INDEX_LINK0.wrl  R_INDEX_LINK1.wrl  R_LOCK_LINK0.wrl  R_MIDDLE_LINK0.wrl  R_MSL_HAND_ALL.wrl  R_MSL_HAND_PALM_WRIST.wrl  R_THUMB_LINK0.wrl  R_THUMB_LINK1.wrl
models/original_wrl/: index_link1.wrl  lock_link0.wrl  matsuurahand_all.wrl  matsuurahand_palm_wrist.wrl  middle_link0.wrl  midfinger_link0.wrl  thumb_link0.wrl  thumb_link1.wrl
models/wrl/: index_link0.wrl  palm_link0.wrl
rules/: 26-matsuura_hand.rules  26-msl_hand.rules
scripts/: dynamixel_joint_trajectory_server.py  manus_glove_test.py  pub_learning_data_from_csv.py  start-matsuura.sh  win_manus_ros_node.bat  win_roscore.bat  win_setup.bat
scripts/test/: measure_current.py  plot_joint_states.py
